--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 <body>
-  Hello world!!!
+  Hello World!!!
+
+  Colin has been here
 </body>
 </html>
